Registro FCT terminado con tempusDominus

--- a/src/views/etapas.hbs
+++ b/src/views/etapas.hbs
@@ -1,4 +1,4 @@
-<h3>Listado de Etapas disponibles: ESO, BACHILLER , GRADO MEDIO Y SUPERIOR</h3>
+<h3>Seleccione una de las siguientes etapas, para Modificar sus asignaturas</h3>
 <ul>
 {{#each etapas as | Etapas |}}
 <li>
