--- a/src/views/registrar_festivo.hbs
+++ b/src/views/registrar_festivo.hbs
@@ -1,7 +1,8 @@
 <!-- Content pagina -->
 <div class="container-fluid">
+	
 	<div class="page-header">
-		<h1 class="text-titles"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro <small>Festivos</small></h1>
+		<h1 class="text-titles"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro<small>de Festivos</small></h1>
 	</div>
 	<p class="lead">Rellenando el siguiente formulario podremos añadir festivos a las localidades y provincias. Este proceso solo podrá realizarlo el administrador</p>
 </div>
@@ -9,7 +10,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<ul class="nav nav-tabs" style="margin-bottom: 15px;">
-				<li class="active"><a href="/registrar_festivo">Nuevo</a></li>
+				<li class="active"><a href="/registrar_festivo">Nuevo festivo</a></li>
 				<li><a href="/festivos">Listado de Festivos</a></li>
 			</ul>
 			<div id="myTabContent" class="tab-content">
@@ -18,6 +19,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-md-10 col-md-offset-1">
 								<form method="post">
+									<!--DATOS DEL FESTIVO-->
 									<div class="form-group label-floating">
 										<label class="control-label">Nombre</label>
 										<input class="form-control" name="nombre" type="text">
