--- a/src/views/crear_alumno.hbs
+++ b/src/views/crear_alumno.hbs
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-xs-12">
       <ul class="nav nav-tabs" style="margin-bottom: 15px;">
-        <li class="active"><a href="/crear_alumno">Nuevo</a></li>
+        <li class="active"><a href="/crear_alumno">Nuevo Alumno</a></li>
         <li><a href="/alumnos">Listado de Alumnos</a></li>
       </ul>
       <div id="myTabContent" class="tab-content">
@@ -64,7 +64,7 @@
                   </div>
               </div>
 
-                <!-- ASIGNATURAS -->
+              <!-- ASIGNATURAS -->
               <div id="datos_asignaturas" style="display:none;">
 								  <h1>ASIGNATURAS</h1>
                   <div class="form-group">
@@ -286,7 +286,7 @@
 </script> 
 
 
-<!--SCRIPT PARA FP   -->
+<!--SCRIPT PARA FP 
 
 <script>
 
@@ -409,7 +409,7 @@
 </script> 
 
 
-<!--SCRIPT PARA ASIGNATURAS-->
+SCRIPT PARA ASIGNATURAS 
 
 <script>
 
@@ -458,7 +458,7 @@
             })
 
         })()
-</script> 
+</script> -->
 
 
   
