--- a/src/views/crear_profesor.hbs
+++ b/src/views/crear_profesor.hbs
@@ -73,7 +73,7 @@
 										</select>
 									</div>
 									<div class="form-group">
-										<label class="control-label">¿De que tipo de grado o curso eres tutor?</label>
+										<label class="control-label">¿De que tipo de grado o etapa eres tutor?</label>
 										<select class="form-control" name="tutor_etapa" id="tutor_etapa"  >
 										   <option disabled selected>-----</option>
 										</select>
