--- a/src/views/mod_profesores.hbs
+++ b/src/views/mod_profesores.hbs
@@ -40,11 +40,11 @@
 										</div>
 									<div class="form-group label-floating">
 										<label class="control-label">Contraseña</label>
-										<input class="form-control" name="password" type="password">
+										<input class="form-control" name="password" type="password" value="{{profesor.password}}">
 										</div>
 									<div class="form-group label-floating">
 										<label class="control-label">Escriba de nuevo su contraseña</label>
-										<input class="form-control" name="password2" type="password">
+										<input class="form-control" name="password2" type="password" value="{{profesor.password}}">
 										</div>
 									<div class="form-group label-floating">
 										<label class="control-label">telefono</label>
@@ -74,7 +74,7 @@
 										</select>
 									</div>
 									<div class="form-group">
-										<label class="control-label">¿De que tipo de grado o curso eres tutor?</label>
+										<label class="control-label">¿De que tipo de grado o etapa eres tutor?</label>
 										<select class="form-control" name="tutor_etapa" id="tutor_etapa" >
 										   <option disabled selected>-----</option>
 										</select>
