--- a/src/views/mod_estudiantes.hbs
+++ b/src/views/mod_estudiantes.hbs
@@ -10,7 +10,6 @@
   <div class="row">
     <div class="col-xs-12">
       <ul class="nav nav-tabs" style="margin-bottom: 15px;">
-        <li class="active"><a href="/crear_alumno">Nuevo</a></li>
         <li><a href="/alumnos">Listado de Alumnos</a></li>
       </ul>
       <div id="myTabContent" class="tab-content">
@@ -65,48 +64,38 @@
                   </div>
               </div>
 
-                <!-- ASIGNATURAS -->
+              <!-- ASIGNATURAS -->
               <div id="datos_asignaturas" style="display:none;">
 								  <h1>ASIGNATURAS</h1>
-                  <div class="form-group">
-										<label class="control-label">¿A que tipo de disciplina perteneces?</label>
-										<select class="form-control" name="tipoDisciplina" id="tipoDisciplina">
-									 	   <option disabled selected>-----</option>
-										   <option value="FP">FP</option>
-										   <option value="Etapa">ESO o Bachiller</option>
-										</select>
-									</div>
-                    <div class="form-group">
-                      <label  class="control-label">Etapa</label>
+                  <div class="FP_Alumno" style="display:block;">
+                    <label class="control-label">Nombre del FP</label>
+										 <select class="form-control" name="nombre_fp" id="nombre_fp">
+                          {{#each fp as | FP |}}
+                          <option value="{{FP._id}}">{{FP.nombre}}</option>
+                          {{/each}}
+                     </select>
+                     <label class="control-label">Tipo de Etapa</label>
+                    <input type="text" class="form-control" name="tipoDisciplina" id="tipoDisciplina" value="{{tipoDisciplina}}"/>
                       <select class="form-control" name="nombre_etapa" id="nombre_etapa">
-                        <option disabled selected>Seleccione una de las etapas</option>
-                      </select>
-                    </div>
-
-									<div class="form-group">
-										<label  class="control-label">Indique el FP al cual se quiere matricular</label>
-										<select class="form-control" name="nombre_fp" id="nombre_fp" disabled>
-											<option selected disabled>---</option>
-										</select>
-                  </div>
-
-                  <div class="form-group">
+                          {{#each fp as | FP |}}
+                          <option value="{{FP._id}}">{{FP.etapa}}</option>
+                          {{/each}}
+                     </select>
                     <label class="control-label">Proporcione el Curso</label>
-                    <select class="form-control" name="n_cursos" id="n_cursos">
-	                      <option selected disabled>---</option> 
-                      </select>
+                    <input type="text" class="form-control" name="n_cursos" id="n_cursos" value="{{cursosAlumno}}" />
                   </div>
 
                    <div class="form-group">
                     <label class="control-label">Asigne las asignaturas a las cuales se va a matricular</label>
                     <select class="form-control" name="asignaturas" id="asignaturas" multiple>
-	                      <option selected disabled>---</option> 
-                    </select>
+	                      {{#each asignaturasFP as | asignaturaFP |}}
+                          <option value="{{asignaturaFP._id}}">{{asignaturaFP.nombre_asignatura}}</option>
+                        {{/each}}
+                      </select>
                   </div> 
                 	 <button type="button" id="button_2">Siguiente</button>
 								   <button type="button" id="button_4">Atras</button>
 						</div>
-            
 
               <!--DIRECCION-->
               <div id="datos_direccion" style="display:none;">
@@ -148,13 +137,13 @@
 								  <h1>DATOS PROVINCIA Y LOCALIDAD</h1>
 									<div class="form-group">
 										<label  class="control-label">Provincia</label>
-										<select class="form-control" name="province" id="province" value="{{alumno.province}}">
+										<select class="form-control" name="province" id="province">
 											<option disabled>Seleccione una provincia</option>
 										</select>
                   </div>
 									<div class="form-group">
 										<label  class="control-label">Localidad</label>
-										<select class="form-control" name="city" id="city" value="{{alumno.city}}" >
+										<select class="form-control" name="city" id="city">
 											<option disabled selected>Seleccione una localidad</option>
 										</select>
                   </div>
