--- a/src/views/registrar_festivo.hbs
+++ b/src/views/registrar_festivo.hbs
@@ -46,7 +46,7 @@
 									<div class="form-group">
 										<label  class="control-label">Localidad</label>
 										<select class="form-control" name="city" id="city" >
-											<option selected disabled>---</option>
+											<option selected disabled>Selecciona una localidad</option>
 										</select>
 									<p class="text-center">
 										<button class="btn btn-info btn-raised btn-sm"><i class="zmdi zmdi-floppy"></i> Save</button>
