--- a/src/views/mod_empresa.hbs
+++ b/src/views/mod_empresa.hbs
@@ -19,13 +19,14 @@
             <div class="row">
               <div class="col-xs-12 col-md-10 col-md-offset-1">
                 <form method="post">
-                  <input type="hidden" name="_method" value="PUT">
+                <input type="hidden" name="_method" value="PUT">
             <!--DATOS EMPRESA  -->
 						<div id="datos_empresa" style="display:block;">
 								<h1>DATOS EMPRESA</h1>
                     <div class="form-group label-floating">
                     <label class="control-label">Nombre o Razon social</label>
-                    <input class="form-control" name="name" type="text" id="name" value="{{empresa.name}}"/>
+                    <input class="form-control" name="name" type="text" id="name" 
+                    value="{{empresa.name}}"/>
                   </div>
                   <div class="form-group label-floating">
                     <label class="control-label">Familia Profesional</label>
