--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -210,12 +210,21 @@
 						{{/ifCond}}
 					</ul>
 				</li>
+
 				<li>
 					<a href="/documentosProfesorado" class="btn-sideBar-SubMenu">
 						<i class="zmdi zmdi-shield-security zmdi-hc-fw"></i>Documentos profesorado<i class="zmdi zmdi-caret-down pull-right"></i>
 					</a>
-					</ul>
 				</li>
+
+				<li>
+					<a href="/eventosReuniones" class="btn-sideBar-SubMenu">
+						<i class="zmdi zmdi-shield-security zmdi-hc-fw"></i>Eventos y reuniones<i class="zmdi zmdi-caret-down pull-right"></i>
+					</a>
+				</li>
+
+
+				
 			</ul>
 		</div>
 	</section>
